--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   </main>
 
   <!-- TODO: Comment this while using HtmlWebpackPlugin -->
-  <script type="text/javascript" src="../dist/app.bundle.js"></script>
+  <!-- <script type="text/javascript" src="../dist/app.bundle.js"></script> -->
 
   <!-- HtmlWebpackPlugin injects bundle here -->
 </body>
